--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: currencybot
     volumes:
-      - .testbot/data/migrations:/docker-entrypoint-initdb.d
+      - ./data/migrations:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
 
