--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ djangorestframework==3.14.0
 draftjs-exporter==2.1.7
 Eel==0.14.0
 et-xmlfile==1.1.0
+exceptiongroup==1.1.3
 ez-setup==0.9
 filelock==3.8.2
 filetype==1.2.0
@@ -66,6 +67,7 @@ multidict==6.0.4
 numpy==1.23.5
 opencv-python==4.6.0.66
 openpyxl==3.1.2
+outcome==1.2.0
 packaging==21.3
 patchelf==0.17.0.0
 piexif==1.1.3
@@ -82,6 +84,7 @@ pyphen==0.14.0
 PyQt5==5.15.7
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.11.0
+PySocks==1.7.1
 pyTelegramBotAPI==4.11.0
 pytesseract==0.3.10
 python-dateutil==2.8.2
@@ -91,14 +94,18 @@ pytz==2023.3
 redis==4.5.4
 requests==2.29.0
 rfc3986==1.5.0
+selenium==4.11.2
 six==1.16.0
 sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.4.1
 sqlparse==0.4.4
 telebot==0.0.5
 telegram.py==0.3.1
 telepath==0.3
 tinycss2==1.2.1
+trio==0.22.2
+trio-websocket==0.10.3
 urllib3==1.26.15
 virtualenv==20.17.1
 wagtail==5.0
@@ -106,6 +113,7 @@ weasyprint==59.0
 webencodings==0.5.1
 whichcraft==0.6.1
 Willow==1.5
+wsproto==1.2.0
 yarl==1.9.1
 zipp==3.11.0
 zope.event==4.5.0
